8292260: [BACKOUT] JDK-8279219: [REDO] C2 crash when allocating array of size too large

Reviewed-by: stuefe
Backport-of: 967a28c3d85fdde6d5eb48aa0edd8f7597772469